Styling and fixing some spacing issues

--- a/finalProject/src/app/app.component.css
+++ b/finalProject/src/app/app.component.css
@@ -4,6 +4,7 @@
 
 .navBar {
   border-radius: 6px;
+ 
   /* background-color: #CBFF4C; */
   background-color: #C7FF20;
   height:50px
@@ -18,7 +19,8 @@
   position:fixed;
   top:0;
   width: 99%;
-  z-index: 1030;
+  z-index: 1;
+  
   /* padding-right: -240px; */
   /* margin-bottom: 50px; */
 }
