--- a/finalProject/src/app/components/home/home.component.css
+++ b/finalProject/src/app/components/home/home.component.css
@@ -119,7 +119,7 @@ h3{
     font-family: 'Outfit', sans-serif;
     font-weight: 300;
     padding-top: 60px;
-    font-size: 130px;
+    font-size: 10vw;
     font-weight: 400;
     line-height: 1.6;
     color: white;
@@ -139,16 +139,20 @@ h3{
 .containerOne {
     display: flex;
     justify-content: space-evenly;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
+
     /* min-height: 100px;
     min-width: 50px; */
 
-    /* overflow: auto; */
+    width: 100%;
+
+    /* overflow: overlay; */
 }
 
 
 .card {
     display: flex;
+    /* flex-shrink: 5; */
     /* flex-direction: column; */
     /* padding-left: 50px; */
     height: 700px;
@@ -171,9 +175,10 @@ h3{
 
 
 .cardText {
+    /* display: flex; */
     font-size: 30px;
     /* max-width: 600px; */
-    width: 500px;
+    width: 550px;
     margin: auto;
     color: black;
     line-height: 1.5;
@@ -190,21 +195,25 @@ h3{
     /* background-color: #CBFF4C; */
     background-color: #C7FF20;
     min-height: 100vh;
+   
 }
 
 .containerTwo {
     display: flex;
     justify-content: space-evenly;
-    flex-wrap: wrap-reverse;
+
+    /* flex-wrap: wrap-reverse; */
 
     /* overflow: auto;*/
 }
 
 .cardTwo {
-    display: flex;
+    /* display: flex; */
     /* flex-direction: column; */
     height: 700px;
     width: 500px;
+    min-height: 600px;
+    min-width: 400px;
     /* max-width: 500px;
     max-height: 700px; */
     margin-top: 150px;
@@ -232,9 +241,14 @@ h3{
 }
 
 .cardTextTwo {
+    /* display: flex; */
     font-size: 30px;
     /* max-width: 600px; */
+    
     width: 550px;
+
+    /* width: 50vw; */
+
     margin: auto;
     color: black;
     line-height: 1.5;
@@ -251,7 +265,7 @@ h3{
     width: 100%;
     margin: auto;
     min-height: 100vh;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
 }
 
 .carouselHeading{
